--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Compartilhe</title>
 </head>
 <body>
-    <header></header>
+    <header class="headerw">
+        <div>
+            <strong><p>Logo</p></strong>
+        </div> 
+    </header>
     <section class="formulario">
-        <img src="" alt="Foto de luis gomes no Pexels">
-        <div></div>
+        <img src="imagens\pexels-luis-gomes-546819.jpg" alt="Foto de luis gomes no Pexels">
+        <div>
+            <ul>
+                <li>Lorem, ipsum dolor  Voluptatem in quis minima, omnis autem sed, soluta, mollitia iste recusandae saepe illo natus! Fugit neque facere ipsa iure, voluptate culpa eveniet!</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis dicta fugiat distinctio molestiae voluptatum rem labore nulla, am!</li>
+                <li>Lorem ipsum dolor sit a tempora soluta veniam debitis dolorum, possimus iste quis exercitationem ad.</li>
+            </ul>
+        </div>
         <form action=""></form>
     </section>
     <section class="informativo">
