--- a/index.html
+++ b/index.html
@@ -14,15 +14,23 @@
         </div> 
     </header>
     <section class="formulario">
-        <img src="imagens\pexels-luis-gomes-546819.jpg" alt="Foto de luis gomes no Pexels">
+        <img src="imagens\pexels-luis-gomes-546819.jpg" al="Foto de luis gomes no Pexels">
         <div>
-            <ul>
+            <ul class="lista">
                 <li>Lorem, ipsum dolor  Voluptatem in quis minima, omnis autem sed, soluta, mollitia iste recusandae saepe illo natus! Fugit neque facere ipsa iure, voluptate culpa eveniet!</li>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis dicta fugiat distinctio molestiae voluptatum rem labore nulla, am!</li>
                 <li>Lorem ipsum dolor sit a tempora soluta veniam debitis dolorum, possimus iste quis exercitationem ad.</li>
             </ul>
         </div>
-        <form action=""></form>
+        <form class="formu">
+            <label for="ema">E-mail</label>
+            <br>
+            <input type="email" name="ema" id="ema">
+            <label for="pass">Senha</label>
+            <br>
+            <input type="password" name="pass" id="pass">
+            <input type="submit" value="logar">
+        </form>
     </section>
     <section class="informativo">
         <h1></h1>
