--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <strong><p>Logo</p></strong>
         </div> 
     </header>
+    <img class="imge" src="imagens\pexels-luis-gomes-546819.jpg" al="Foto de luis gomes no Pexels">
     <section class="formulario">
-        <img src="imagens\pexels-luis-gomes-546819.jpg" al="Foto de luis gomes no Pexels">
         <div>
             <ul class="lista">
                 <li>Lorem, ipsum dolor  Voluptatem in quis minima, omnis autem sed, soluta, mollitia iste recusandae saepe illo natus! Fugit neque facere ipsa iure, voluptate culpa eveniet!</li>
@@ -22,34 +22,29 @@
                 <li>Lorem ipsum dolor sit a tempora soluta veniam debitis dolorum, possimus iste quis exercitationem ad.</li>
             </ul>
         </div>
-        <form class="formu">
-            <label for="ema">E-mail</label>
-            <br>
-            <input type="email" name="ema" id="ema">
-            <label for="pass">Senha</label>
-            <br>
-            <input type="password" name="pass" id="pass">
-            <input type="submit" value="logar">
-        </form>
+        <div class="info">
+            <strong><p>Mais informações</p></strong>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius eum sunt numquam eveniet quos dolor alias facilis, velit perspiciatis earum dolores assumenda corrupti ut rerum! Non labore corporis sit expedita!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea quae sint quod numquam perspiciatis iste facere sed. Necessitatibus consectetur pariatur quos magnam eos dolorem reprehenderit eligendi ratione deserunt, itaque deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam labore pariatur, ratione ex eligendi neque est suscipit blanditiis! Fuga, quibusdam recusandae? Odit rerum incidunt eum aliquam corrupti quibusdam, ab excepturi.</p>
+            <p>Lorem ipsum dolor sit, magni consequuntur! Optio excepturi voluptate quos doloribus libero.</p>
+        </div>
     </section>
     <section class="informativo">
-        <h1></h1>
-        <p></p>
+        <h1 style="text-align: center;">Lorem Ipsum</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum, corporis incidunt. Est eius, porro suscipit ducimus a impedit quibusdam maiores reprehenderit error, quis deleniti minima dolorem, tenetur ut architecto tempore. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque vitae autem quibusdam perspiciatis, recusandae culpa tempore debitis provident, nihil libero aperiam laborum iusto hic voluptate dignissimos incidunt doloribus ipsam sed? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem, totam autem consequatur animi tempora ut, mollitia, quaerat adipisci assumenda alias iure voluptate quas impedit voluptates! At laborum vel magni ducimus.</p>
     </section>
-    <section class="triade">
+    <footer>
         <div>
-            <h1></h1>
-            <p></p>
+            <h1>Desenvolvedor</h1>
+            <p>Este site foi desenvolvido por <strong>Pedro H. P. Oliveira Santos</strong>, o layout foi inspirado em outros sites, porém sua proposta não é originalidade, mas sim, <i>responsividade.</i></p>
         </div>
         <div>
-            <h1></h1>
-            <p></p>
+            <h1>Créditos</h1>
+            <p>A imagem do computador, usada na primeria section do site, foi tirada por Luis Gomes e encontrada no site <a href="https://www.pexels.com/pt-br/">Pexels</a>.</p>
         </div>
         <div>
-            <h1></h1>
-            <p></p>
-        </div>
-    </section>
-    <footer></footer>
+            <h1>Considerações</h1>
+            <p>Tive problemas no começo do site e alguns permaneceram, mas em suma, estou satisfeito com o resultado final e com o que aprendi neste projeto. pretendo melhorar com mais projetos e no futuro concertar no que eu errei aqui.</p>
+    </footer>
 </body>
 </html>
