--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <strong><p>Logo</p></strong>
         </div> 
     </header>
-    <img class="imge" src="imagens\pexels-luis-gomes-546819.jpg" al="Foto de luis gomes no Pexels">
+    <img class="imge" src="imagens\pexels-luis-gomes-546819.jpg" al="laptop">
     <section class="formulario">
         <div>
             <ul class="lista">
@@ -33,10 +33,10 @@
         <h1 style="text-align: center;">Lorem Ipsum</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum, corporis incidunt. Est eius, porro suscipit ducimus a impedit quibusdam maiores reprehenderit error, quis deleniti minima dolorem, tenetur ut architecto tempore. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque vitae autem quibusdam perspiciatis, recusandae culpa tempore debitis provident, nihil libero aperiam laborum iusto hic voluptate dignissimos incidunt doloribus ipsam sed? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem, totam autem consequatur animi tempora ut, mollitia, quaerat adipisci assumenda alias iure voluptate quas impedit voluptates! At laborum vel magni ducimus.</p>
     </section>
-    <footer>
+    <section class="triade">
         <div>
             <h1>Desenvolvedor</h1>
-            <p>Este site foi desenvolvido por <strong>Pedro H. P. Oliveira Santos</strong>, o layout foi inspirado em outros sites, porém sua proposta não é originalidade, mas sim, <i>responsividade.</i></p>
+            <p>Este site foi desenvolvido por <strong>Pedro H. P. Oliveira Santos</strong>, o layout foi inspirado em outros sites, porém sua proposta não é desing, mas sim, <i>responsividade.</i></p>
         </div>
         <div>
             <h1>Créditos</h1>
@@ -44,7 +44,11 @@
         </div>
         <div>
             <h1>Considerações</h1>
-            <p>Tive problemas no começo do site e alguns permaneceram, mas em suma, estou satisfeito com o resultado final e com o que aprendi neste projeto. pretendo melhorar com mais projetos e no futuro concertar no que eu errei aqui.</p>
+            <p>Tive problemas no começo do site e alguns permaneceram, mas em suma, estou satisfeito com o resultado final e com o que aprendi neste projeto. pretendo melhorar com mais projetos e no futuro consertar no que eu errei aqui.</p>
+    </section>
+    <footer>
+        <hr>
+        <p>Visite meu <a href="https://github.com/Pedro-Oliveira?tab=overview&from=2021-03-01&to=2021-03-31">Github</a></p>
     </footer>
 </body>
 </html>
