--- a/index.html
+++ b/index.html
@@ -5,33 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Compartilhe</title>
+    <title>simple site</title>
 </head>
 <body>
-    <header class="headerw">
-        <div>
-            <strong><p>Logo</p></strong>
-        </div> 
+    <header class="header">
+        <p>Logo</p>
     </header>
-    <img class="imge" src="imagens\pexels-luis-gomes-546819.jpg" al="laptop">
-    <section class="formulario">
+    <section class="lista">
         <div>
-            <ul class="lista">
+            <ul class="itens">
                 <li>Lorem, ipsum dolor  Voluptatem in quis minima, omnis autem sed, soluta, mollitia iste recusandae saepe illo natus! Fugit neque facere ipsa iure, voluptate culpa eveniet!</li>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis dicta fugiat distinctio molestiae voluptatum rem labore nulla, am!</li>
                 <li>Lorem ipsum dolor sit a tempora soluta veniam debitis dolorum, possimus iste quis exercitationem ad.</li>
             </ul>
         </div>
         <div class="info">
-            <strong><p>Mais informações</p></strong>
+            <strong class="titulo"><p>Mais informações</p></strong>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius eum sunt numquam eveniet quos dolor alias facilis, velit perspiciatis earum dolores assumenda corrupti ut rerum! Non labore corporis sit expedita!</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea quae sint quod numquam perspiciatis iste facere sed. Necessitatibus consectetur pariatur quos magnam eos dolorem reprehenderit eligendi ratione deserunt, itaque deleniti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam labore pariatur, ratione ex eligendi neque est suscipit blanditiis! Fuga, quibusdam recusandae? Odit rerum incidunt eum aliquam corrupti quibusdam, ab excepturi.</p>
             <p>Lorem ipsum dolor sit, magni consequuntur! Optio excepturi voluptate quos doloribus libero.</p>
         </div>
     </section>
-    <section class="informativo">
+    <section class="information">
         <h1 style="text-align: center;">Lorem Ipsum</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum, corporis incidunt. Est eius, porro suscipit ducimus a impedit quibusdam maiores reprehenderit error, quis deleniti minima dolorem, tenetur ut architecto tempore. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque vitae autem quibusdam perspiciatis, recusandae culpa tempore debitis provident, nihil libero aperiam laborum iusto hic voluptate dignissimos incidunt doloribus ipsam sed? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem, totam autem consequatur animi tempora ut, mollitia, quaerat adipisci assumenda alias iure voluptate quas impedit voluptates! At laborum vel magni ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum, corporis incidunt. Est eius, porro suscipit ducimus a impedit quibusdam maiores reprehenderit error, quis deleniti minima dolorem, tenetur ut architecto tempore. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque vitae autem quibusdam perspiciatis, recusandae culpa tempore debitis provident, nihil libero aperiam laborum iusto hic voluptate dignissimos incidunt doloribus ipsam sed? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem, totam autem consequatur anim loor lore Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum earum ratione nulla quo hic magni minus laboriosam suscipit, corporis architecto! Blanditiis perferendis, inventore ratione porro totam rerum. Quaerat,nsectetur adipisicing elit. Eum nemo deleniti excepturi necessitatibus magnam fuga deserunt quasi tenetur maiores eos dignissimos iure laudantium rem, quis facere exercitationem qui dolorem ex. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam laboriosam illum consectetur quod! Eum, maxime officiis vero corporis harum veniam quas, enim sunt repudiandae nobis laborum velit, nulla rerum eaque. i tempora ut, mollitia, quaerat adipisci assumenda alias iure voluptate quas impedit voluptates! At laborum vel magni ducimus.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, obcaecati. Officia ipsum, tempora excepturi mollitia et laboriosam veritatis odit explicabo ab est numquam molestiae, porro, doloribus reprehenderit vero. Provident, quidem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus magnam tempora officiis suscipit repudiandae doloribus totam et qui! Obcaecati unde cumque quo velit fuga. Et eaque ut est ad soluta! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia inventore nam qui commodi laudantium, obcaecati nihil nobis adipisci ducimus voluptatibus ea suscipit quis officiis! Tempora numquam velit sint. Rem necessitatibus nostrum at odio totam impedit reiciendis, mollitia laudantium quam dicta laborum architecto unde accusantium similique explicabo Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque fuga nam ut debitis placeat ipsam, laboriosam molestiae, maxime iure nihil aspernatur tenetur delectus a odit natus! Neque aliquam eum quis!</p>
     </section>
     <section class="triade">
         <div>
